# pku-pvz

./: .gitignore  Makefile  bullet.py  button.py  game.py  item.py  log.txt  main.py  main.spec  merge.py  plant.py  plant_card.py  pyproject.toml  shovel.py  start.py  static.py  status.py  sun.py  test_plant.py  test_zombie.py  text.py  utils.py  victory.py  zombie.py  zombie_spawner.py
.github/workflows/: release.yml
bullets/: lamei_bullet.py  libullet.py  luomobullet.py  suanzao_bullet.py  zhiyingxiang.py
configs/buttons/: end_button.json  start_button.json
configs/plant_cards/: banzhongcao.json  baojingxiaokumai.json  dihuang.json  dongqingweimao.json  heidanshu.json  huangcimei.json  lamei.json  li.json  luomo.json  plant1.json  plant2.json  plant3.json  plant4.json  plant5.json  plant6.json  plant7.json  plant8.json  plant_cards.json  suanzaojianongpao.json  zhonghuaxiaokumai.json  zihuadiding.json
configs/statics/: aim.json  ant.json  game_background.json  lamei_bullet.json  li_bullet.json  logo.json  luomo_bullet.json  mask.json  rope.json  shovel.json  start_background.json  start_game_background.json  suanzaojianongpao_bullet.json  sun.json  sun_middle.json  sun_small.json  xiaofeng.json  zhiyingxiang.json
plants/: aim.py  ant.py  banzhongcao.py  baojingxiaokumai.py  dihuang.py  dongqingweimao.py  heidanshu.py  huangcimei.py  lamei.py  li.py  luomo.py  suanzao.py  zhonghuaxiaokumai.py  zihuadiding.py
zombies/: fake_zombie.py  lanjiaojiangshi.py  shachenbaojiangshi.py  shigongjiangshi.py  wacaijiangshi.py  xionghaizijiangshi.py
(+38 files in other folders)
